--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-modernist
 title: Videoflo
-description: Videoflo is an on-premise framework to build on-premise video-based workflows.
+description: An application framework to build "on-premise" video-based workflows.
 show_downloads: true
