Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-cayman
 title: Videoflo
 description: An application framework to build "on-premise" video-based workflows.
 show_downloads: false
